objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Haystak</fullName>
        <description>Haystak Sales Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Appointment Set</fullName>
        </values>
        <values>
            <fullName>Bad</fullName>
        </values>
        <values>
            <fullName>Contact Attempted</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Not Interested</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Updated</fullName>
        </values>
        <values>
            <fullName>Webexed</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>VinSolutions</fullName>
        <description>Vin Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Appointment Set</fullName>
        </values>
        <values>
            <fullName>Bad</fullName>
        </values>
        <values>
            <fullName>Contact Attempted</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Not Interested</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Outgoing</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Re-Market</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Updated</fullName>
        </values>
        <values>
            <fullName>Webexed</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vAuto</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Appointment Set</fullName>
        </values>
        <values>
            <fullName>Bad</fullName>
        </values>
        <values>
            <fullName>Contact Attempted</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Not Interested</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Updated</fullName>
        </values>
        <values>
            <fullName>Webexed</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ALERT__c</fullName>
        <label>****ALERT****</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_ATG_Package__c</fullName>
        <description>Used by ATC Lead Generation email service.</description>
        <inlineHelpText>Used by ATC Lead Generation email service.</inlineHelpText>
        <label>ATC / ATG Package</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_District__c</fullName>
        <label>ATC District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Division__c</fullName>
        <label>ATC Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Region__c</fullName>
        <label>ATC Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Status__c</fullName>
        <description>Status of ATC from ATG Core SF org.</description>
        <inlineHelpText>Status of ATC from ATG Core SF org.</inlineHelpText>
        <label>ATC Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Email__c</fullName>
        <label>Affiliate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Affiliate_Name__c</fullName>
        <label>Affiliate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Phone__c</fullName>
        <label>Affiliate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <label>Affiliate</label>
        <picklist>
            <picklistValues>
                <fullName>AutoTrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cox Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealerTrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genius Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homenet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manheim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NextGear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xtime</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Street_Address__c</fullName>
        <label>Billing Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <inlineHelpText>enter the Business Unit this lead applies to</inlineHelpText>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>AutoTrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cox Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homenet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XTime</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Contract_End__c</fullName>
        <description>CRM Contract End Date</description>
        <inlineHelpText>Input as Month and Year, i.e. March 2008</inlineHelpText>
        <label>CRM Contract End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM__c</fullName>
        <description>Dealer Current CRM Tool</description>
        <inlineHelpText>What CRM tool is dealer using</inlineHelpText>
        <label>CRM</label>
        <picklist>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBytel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Soft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buzz Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Doone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.Com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Dealer Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Manager - Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Mine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Peak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Socket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Ups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Biz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Gear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iCar/iMagic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Access</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign DEPRECATED DO NOT USE</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cars_Sold_Monthly__c</fullName>
        <label># Cars Sold Monthly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitive_Product__c</fullName>
        <description>Used by ATC Lead Generation email service.</description>
        <inlineHelpText>Used by ATC Lead Generation email service.</inlineHelpText>
        <label>Competitive Product</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Timestamp__c</fullName>
        <formula>CreatedDate</formula>
        <inlineHelpText>formula field that displays created date with timestamp</inlineHelpText>
        <label>Created Date/Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_by_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <inlineHelpText>formula field that notates the role of the person who created the lead</inlineHelpText>
        <label>Created by Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Sub_Type__c</fullName>
        <label>Customer Sub Type</label>
        <picklist>
            <controllingField>Customer_Type__c</controllingField>
            <picklistValues>
                <fullName>AUCTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTOMOTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINANCIAL INSTITUTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVERNMENT - FEDERAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVERNMENT - STATE, LOCAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSURANCE COMPANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEASING COMPANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON-AUTOMOTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RESELLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE PROVIDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclassified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHOLESALER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEMAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Car Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DDM__c</fullName>
        <formula>IF(State = &quot;NY&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;PA&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;NC&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;IL&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;IN&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;GA&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;WI&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;OH&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;WA&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;OR&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;TN&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;IA&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;SC&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;AR&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;LA&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;MA&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;ID&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;VT&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;NE&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;NV&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;ME&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;NH&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;DE&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;TX&quot;, &quot;Alex Moore&quot;,
IF(State = &quot;RI&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;WV&quot;, &quot;Donna Stearns&quot;,
IF(State = &quot;CA&quot;, &quot;Donna Stearns&quot;, &quot;Alex Moore&quot;)
))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_System__c</fullName>
        <inlineHelpText>Dealership Management System</inlineHelpText>
        <label>DMS System</label>
        <picklist>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Mate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Biz MSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarThink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Click</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debuque Data Service, DD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEI Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frazer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genisys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grapevine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovative Dealer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jarvis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightyear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penny System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quorum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reynolds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;ALL LEAD DETAILS CAPTURED&quot;, &quot;NEEDED FOR CONVERT: &quot;&amp;IF( ISPICKVAL( Customer_Type__c ,&quot;&quot;), &quot;Customer Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Lot_Size_New__c ,&quot;&quot;), &quot;Lot Size New, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Lot_Size_Used__c ,&quot;&quot;), &quot;Lot Size Used, &quot;,&quot;&quot;)&amp; IF( ISBLANK(  Franchise_1__c), &quot;Nameplates, &quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Message__c</fullName>
        <formula>IF(
   Data_Quality_Score__c = 100,
   NULL,
   IMAGE(&quot;/servlet/servlet.FileDownload?file=015700000021Q22&quot;, &quot;Missing Data&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>image that displays if the data quality score is not equal to 100</inlineHelpText>
        <label>Data Quality Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(  Customer_Type__c  ,&quot;&quot;), 0,25) + IF( ISPICKVAL(  Lot_Size_New__c  ,&quot;&quot;), 0,25) + IF( ISPICKVAL(  Lot_Size_Used__c  ,&quot;&quot;), 0,25) + IF( ISBLANK( Franchise_1__c ),0,25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Time_Lead_Validated__c</fullName>
        <inlineHelpText>updated by workflow when the field Lead Validated? checked</inlineHelpText>
        <label>Date/Time Lead Validated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Create_to_Convert__c</fullName>
        <formula>ConvertedDate -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Create to Convert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_ID__c</fullName>
        <label>Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Principal__c</fullName>
        <label>Dealer Principal</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <label>Dealer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Demo_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FN__Do_Not_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FN__Find_Nearby__c</fullName>
        <formula>IF( ISPICKVAL(FN__Mapping_Status__c , &apos;Located&apos;),  HYPERLINK( &quot;apex/FN__FindNearbymap?aid=null&amp;lid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) ,   HYPERLINK( &quot;apex/FN__LGeoCode?id=&quot; &amp; Id,&quot;Locate Lead&quot;,&quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Find Nearby</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Lat__c</fullName>
        <label>Latitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Lon__c</fullName>
        <label>Longitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Status__c</fullName>
        <label>Mapping Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Located Yet</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Located</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem with Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feature_of_Interest__c</fullName>
        <description>http://www.pages05.net/mxg-vinsolutions/mobile-splash/</description>
        <label>Feature of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile I.D. Scanner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Call Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Franchise_1__c</fullName>
        <description>Franchise(s)</description>
        <inlineHelpText>Pick multiple Franchises by selecting the Franchise and then click the Arrow button to add the Franchise to the Dealers list.</inlineHelpText>
        <label>Nameplates</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bugatti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hummer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lotus</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>Dealer Group Name</description>
        <inlineHelpText>Group Dealer Is Associated With</inlineHelpText>
        <label>Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeNet_Status__c</fullName>
        <label>HomeNet Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hot_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To flag urgency of VGL leads</description>
        <label>Hot Transfer</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>